--- a/build.xml
+++ b/build.xml
@@ -33,24 +33,6 @@
 
 	<mkdir dir="${download.dir}"/>
 	<mkdir dir="${build.dir}" />
-
-		<condition property="have-apis">
-		<and>
-			<available file="${download.dir}/PowerCrystalsCore-master.zip"/>
-		</and>
-	</condition>
-
-	<target name="get-dependencies" depends="get-version" unless="${have-apis}">
-		<echo message="Downloading PowerCrystalsCore... " />
-		<get src="https://github.com/powercrystals/PowerCrystalsCore/archive/master.zip" dest="${download.dir}/PowerCrystalsCore-master.zip"/>
-	</target>
-
-	<target name="extract-dependencies" depends="setup-forge,get-dependencies">
-		<echo message="Extracting PowerCrystalsCore... " />
-		<unzip src="${download.dir}/PowerCrystalsCore-master.zip" dest="${download.dir}"/>
-		<move file="${download.dir}/PowerCrystalsCore-master/src/powercrystals/core" todir="${mcpsrc.dir}/powercrystals/"/>
-	</target>
-	
 	
 	<target name="get-version" depends="setup-forge">
 		<exec dir="${verclass.dir}" executable="sh" osfamily="unix" outputproperty="grep.out">
@@ -74,12 +56,12 @@
 	</condition>
 
 	<target name="install" depends="build">
-		<jar destfile="${dist.dir}/PowerCrystalsCore-${grep.out}-${build.number}.jar" basedir="${classes.dir}"/>
+		<jar destfile="${dist.dir}/FlatBedrock-${grep.out}-${build.number}.jar" basedir="${classes.dir}"/>
 		<delete dir="${classes.dir}" />
 		<delete dir="${mcp.dir}/reobf"/>
 	</target>
 
-	<target name="build" depends="extract-dependencies" unless="already-compiled">
+	<target name="build" depends="get-version" unless="already-compiled">
 		<!-- Copy source -->
 		<mkdir dir="${mcpsrc.dir}/powercrystals" />
 		<copy todir="${mcpsrc.dir}/powercrystals" overwrite="true">
@@ -105,7 +87,6 @@
 			<arg value="reobfuscate.sh" />
 		</exec>
 
-		<delete dir="${mcp.dir}/reobf/minecraft/powercrystals/core"/>
 		<copy todir="${classes.dir}">
 			<fileset dir="${mcp.dir}/reobf/minecraft"/>
 		</copy>
