--- a/build.xml
+++ b/build.xml
@@ -39,7 +39,7 @@
 			<arg value="-c"/>
 			<arg value="grep -o -P '[0-9.]+R[0-9.]+(RC[0-9]+)?(B[0-9]+)?' ${verclass.name}"/>
 		</exec>
-		<exec executable="python" osfamily="unix">
+		<exec executable="python" osfamily="unix" outputproperty="python.out">
 			<arg value="versionscript.py" />
 			<arg value="${grep.out}" />
 		</exec>
@@ -56,7 +56,7 @@
 	</condition>
 
 	<target name="install" depends="build">
-		<jar destfile="${dist.dir}/FlatBedrock-${grep.out}-${build.number}.jar" basedir="${classes.dir}"/>
+		<jar destfile="${dist.dir}/FlatBedrock-${python.out}-${build.number}.jar" basedir="${classes.dir}"/>
 		<delete dir="${classes.dir}" />
 		<delete dir="${mcp.dir}/reobf"/>
 	</target>
