--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,32 @@
 	<mkdir dir="${download.dir}"/>
 	<mkdir dir="${build.dir}" />
 	
+	<condition property="have-apis">
+		<and>
+			<available file="${download.dir}/PowerCrystalsCore-master.zip"/>
+			<available file="${download.dir}/BuildCraft-master.zip"/>
+		</and>
+	</condition>
+	
+	<target name="get-dependencies" depends="get-version" unless="${have-apis}">
+		<echo message="Downloading BuildCraft API..." />
+		<get src="https://github.com/BuildCraft/BuildCraft/archive/master.zip" dest="${download.dir}/BuildCraft-master.zip"/>
+		
+		<echo message="Downloading PowerCrystalsCore... " />
+		<get src="https://github.com/powercrystals/PowerCrystalsCore/archive/master.zip" dest="${download.dir}/PowerCrystalsCore-master.zip"/>
+	</target>
+	
+	<target name="extract-dependencies" depends="setup-forge,get-dependencies">
+		<echo message="Extracting PowerCrystalsCore... " />
+		<unzip src="${download.dir}/PowerCrystalsCore-master.zip" dest="${download.dir}"/>
+		<move file="${download.dir}/PowerCrystalsCore-master/src/powercrystals/core" todir="${mcpsrc.dir}/powercrystals/"/>
+		
+		<echo message="Extracting BuildCraft API..." />
+		<unzip src="${download.dir}/BuildCraft-master.zip" dest="${download.dir}"/>
+		<mkdir dir="${mcpsrc.dir}/buildcraft/" />
+		<move file="${download.dir}/BuildCraft-master/common/buildcraft/api" todir="${mcpsrc.dir}/buildcraft/"/>
+	</target>
+	
 	<target name="get-version" depends="setup-forge">
 		<exec dir="${verclass.dir}" executable="sh" osfamily="unix" outputproperty="grep.out">
 			<arg value="-c"/>
@@ -86,6 +112,9 @@
 		<exec dir="${mcp.dir}" executable="sh" osfamily="unix">
 			<arg value="reobfuscate.sh" />
 		</exec>
+		
+		<delete dir="${mcp.dir}/reobf/minecraft/buildcraft"/>
+		<delete dir="${mcp.dir}/reobf/minecraft/powercrystals/core"/>
 
 		<copy todir="${classes.dir}">
 			<fileset dir="${mcp.dir}/reobf/minecraft"/>
