--- a/build.xml
+++ b/build.xml
@@ -152,9 +152,7 @@
 
 		<chmod file="${forge.dir}/install.sh" perm="+x"/>
 
-		<!-- if your building on OSX these 2 should be executable -->
-
-
+		<copy file="${download.dir}/PowerCrystalsCore-master/pcc_at.cfg" todir="${forge.dir}/accesstransformers/"/>
 
 		<!-- Install forge -->
 		<delete dir="${mcp.dir}" failonerror="no"/>
